# legion

./: README.md
llm-ai-scheduler/: .env.example  .gitignore  Makefile  README.md  create_placeholders.py  pyproject.toml
llm-ai-scheduler/app/: __init__.py  llm.py  main.py  rag.py  scheduler.py  schema.py
llm-ai-scheduler/app/static/: app.js  index.html  style.css
llm-ai-scheduler/data/documents/: scheduler_faq.md
llm-ai-scheduler/data/patient_docs/: john_doe_medical_record.md
llm-ai-scheduler/data/sample_requests/: structured_availability.json  text_availability.json
llm-ai-scheduler/docs/: README.md
llm-ai-scheduler/tests/: __init__.py  conftest.py  test_api.py  test_llm_parsing.py  test_rag.py  test_scheduler.py
